# scribe

./: .coverage  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE  Makefile  README.rst  authors.html  changelog.html  genindex.html  index.html  objects.inv  pyproject.toml  quickstart.html  search.html  searchindex.js
_sources/: changelog.rst.txt  quickstart.rst.txt
docs/: authors.rst  conf.py  index.rst  installation.rst  nitpick-ignore  quickstart.rst
scribe/: __init__.py  cli.py  scribe.yaml  validation.py
tests/: conftest.py  test_binance.py  test_cli.py  test_scribe.py
