[tool.poetry]
name = "scribe"
version = "0.1.0"
description = "Crypto market data recorder"
authors = ["Ludovic Tiako <ludovic.tiako@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.8.2"
python-binance = {version = "^1.0.10"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
pre-commit = "^2.10.1"
pytest = "^6.2.2"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.11.1"
sphinx = "^3.5.1"
sphinx-autobuild = "^0.7.1"
sphinx-autodoc-typehints = "^1.11.1"
sphinx-rtd-theme = "^0.5.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip = []

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
